--- a/index.html
+++ b/index.html
@@ -1,1 +1,60 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title> Reinout De Bleser </title>
+</head>
+<body>
 
+<h1><b>Reinout De Bleser </b></h1>
+<p><i>Information consumes attention. Attention is necessary to learn and to appreciate your surroundings.
+    </br>Let loose your earthly tethers, breathe and become wind. </i></p>
+<img src="C:\Users\Reinout\Documents\BeCode\RDB.jpg" >
+<h2> Incredibly productive while procrastinating for the important things</h2>
+<table>
+    <tr>
+        <th> Birthday: </th>
+        <td> 14/11 </td>
+    </tr>
+
+    <tr>
+        <th> Gender: </th>
+        <td> Man </td>
+    </tr>
+
+    <tr>
+        <th> Favorite color: </th>
+        <td> Blue </td>
+    </tr>
+
+    <tr>
+        <th> Favourite food:  </th>
+        <td> Home cooked meals </td>
+    </tr>
+
+    <tr>
+        <th>Pineapple on pizza: </th>
+        <td> <div> <input type="checkbox"> </label> </div></td>
+    </tr>
+</table>
+<h2> Hobbies </h2>
+<p>
+<ul>
+    <li> Cook </li>
+    <li> Eat </li>
+    <li> Game</li>
+    <li> Talk</li>
+    <li> Relax</li>
+    <li> Read</li>
+</ul>
+</p>
+<h2> You can always count on me to ... </h2>
+Commit fully to a project once I've set my mind to it.
+However, it'll take some time to do so as I don't like to let people down, and am also wary of making commitments or promises I can't keep.
+To be honest I take promises and commitments very seriously.
+<h2> A funny story </h2>
+
+<h3> TL;DR:  </h3>
+<p> Calm, cool, collected </p>
+ <a href="Daryl"><< Previous</a>  || REINOUT DE BLESER || <a href="https://minjie0501.github.io/css-introduction/">Next >></a>
+</body>
+</html>
