--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
 <body>
 
 <h1><b>Reinout De Bleser </b></h1>
-<p><i>Information consumes attention. Attention is necessary to learn and to appreciate your surroundings.
-    </br>Let loose your earthly tethers, breathe and become wind. </i></p>
-<img src="C:\Users\Reinout\Documents\BeCode\RDB.jpg" >
-<h2> Incredibly productive while procrastinating for the important things</h2>
+<p><i>Love of bustle is not industry. </i></p>
+<img src="RDB.jpg" width="400px"/>
+<h2> Cool, calm, collected, curious </h2>
 <table>
     <tr>
         <th> Birthday: </th>
@@ -41,20 +40,32 @@
 <ul>
     <li> Cook </li>
     <li> Eat </li>
-    <li> Game</li>
-    <li> Talk</li>
-    <li> Relax</li>
-    <li> Read</li>
+    <li> Game </li>
+    <li> Talk </li>
+    <li> Relax </li>
+    <li> Read </li>
 </ul>
 </p>
 <h2> You can always count on me to ... </h2>
+<p>Listen carefully to what you are saying.
+Try to provide any worthwhile comment from my perspective that could be help.
 Commit fully to a project once I've set my mind to it.
-However, it'll take some time to do so as I don't like to let people down, and am also wary of making commitments or promises I can't keep.
-To be honest I take promises and commitments very seriously.
+Making promises I can keep. To be honest I take promises and commitments very seriously.</p>
+
 <h2> A funny story </h2>
 
+<p>I had this friend of mine that got lost once when we went out a few years back.
+We looked for 2-3 hours and walked back and forth the only route he could have gone.
+Scared to death he fell in a ditch and was drowning.
+We were on a scouts weekend and this guy got kind of drunk and managed to lose his sense of direction, walk the complete oppostite direction and then break and enter a house of an older couple.
+The two lovely people thought it was their son having had one too much as he was laying in the couch in the garage.
+These people after noticing him sleeping gave him a blanket and let him sleep off his drunkness only to send him back to us in the morning.
+We waiting tense in the morning are very relieved as the guy stumbles in the building hungover but quite okay as he starts telling us what musthave happened.
+He blacked out and couldn't really remember too well.
+This is also the guy that is not allowed to take the bike home anymore after not just once but twice doubly breaking his jaw after falling riding home when drunk.
+</p>
 <h3> TL;DR:  </h3>
-<p> Calm, cool, collected </p>
- <a href="Daryl"><< Previous</a>  || REINOUT DE BLESER || <a href="https://minjie0501.github.io/css-introduction/">Next >></a>
+<p> Guy gets drunk, friends search but can't find guy sleeps on random couch in garage, gets blanket, tells the story at breakfast.</p>
+ <a href="https://leweyse.github.io/html_introduction/"><< Previous</a>  || REINOUT DE BLESER || <a href="https://minjie0501.github.io/css-introduction/">Next >></a>
 </body>
 </html>
