--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title> Reinout De Bleser </title>
+    <link rel="stylesheet" href="style.css">
+    <title> Reinout De Bleser</title>
 </head>
 <body>
 
-<h1><b>Reinout De Bleser </b></h1>
-<p><i>Love of bustle is not industry. </i></p>
-<img src="RDB.jpg" width="400px"/>
+<h1><b>Reinout</b></h1>
+<p id="special"><i>Love of bustle is not industry. </i></p>
+<img src="RDB.jpg" width="250px" alt="image unable to display"/>
 <h2> Cool, calm, collected, curious </h2>
 <table>
     <tr>
@@ -32,25 +33,23 @@
 
     <tr>
         <th>Pineapple on pizza: </th>
-        <td> <div> <input type="checkbox"> </label> </div></td>
+        <td> <input type="checkbox"> </td>
     </tr>
 </table>
 <h2> Hobbies </h2>
-<p>
 <ul>
-    <li> Cook </li>
-    <li> Eat </li>
-    <li> Game </li>
+    <li> Cook: singlepan dishes ftw </li>
+    <li> Eat: simple good food </li>
+    <li> Game: rts, table top,  </li>
     <li> Talk </li>
     <li> Relax </li>
-    <li> Read </li>
+    <li> Read: books, sci-fi & non-fiction </li>
 </ul>
-</p>
 <h2> You can always count on me to ... </h2>
 <p>Listen carefully to what you are saying.
 Try to provide any worthwhile comment from my perspective that could be help.
 Commit fully to a project once I've set my mind to it.
-Making promises I can keep. To be honest I take promises and commitments very seriously.</p>
+Making promises I can keep. Then also keep those.</p>
 
 <h2> A funny story </h2>
 
@@ -64,8 +63,8 @@ We waiting tense in the morning are very relieved as the guy stumbles in the bui
 He blacked out and couldn't really remember too well.
 This is also the guy that is not allowed to take the bike home anymore after not just once but twice doubly breaking his jaw after falling riding home when drunk.
 </p>
-<h3> TL;DR:  </h3>
+<h2> tl;dr  </h2>
 <p> Guy gets drunk, friends search but can't find guy sleeps on random couch in garage, gets blanket, tells the story at breakfast.</p>
- <a href="https://leweyse.github.io/html_introduction/"><< Previous</a>  || REINOUT DE BLESER || <a href="https://minjie0501.github.io/css-introduction/">Next >></a>
+<h2><a href="https://leweyse.github.io/html_introduction/"><< Previous</a>  || Reinout || <a href="https://minjie0501.github.io/css-introduction/">Next >></a> </h2>
 </body>
 </html>
