--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 <body>
 
 <h1><b>Reinout</b></h1>
-<p id="special"><i>Love of bustle is not industry. </i></p>
+<p id="special"><i>Love of bustle is not industry. - Seneca </i></p>
 <img src="RDB.jpg" width="250px" alt="image unable to display"/>
 <h2> Cool, calm, collected, curious </h2>
-<table>
+<div>
+    <table>
     <tr>
         <th> Birthday: </th>
         <td> 14/11 </td>
@@ -36,6 +37,7 @@
         <td> <input type="checkbox"> </td>
     </tr>
 </table>
+</div>
 <h2> Hobbies </h2>
 <ul>
     <li> Cook: singlepan dishes ftw </li>
@@ -60,8 +62,7 @@ We were on a scouts weekend and this guy got kind of drunk and managed to lose h
 The two lovely people thought it was their son having had one too much as he was laying in the couch in the garage.
 These people after noticing him sleeping gave him a blanket and let him sleep off his drunkness only to send him back to us in the morning.
 We waiting tense in the morning are very relieved as the guy stumbles in the building hungover but quite okay as he starts telling us what musthave happened.
-He blacked out and couldn't really remember too well.
-This is also the guy that is not allowed to take the bike home anymore after not just once but twice doubly breaking his jaw after falling riding home when drunk.
+He blacked out and couldn't really remember. Special guy
 </p>
 <h2> tl;dr  </h2>
 <p> Guy gets drunk, friends search but can't find guy sleeps on random couch in garage, gets blanket, tells the story at breakfast.</p>
